styles.css
* {
  box-sizing: border-box;
}

button {
  border: 0;
  padding-right: 0px;
  padding-left: 0px;
  outline: 0;
  cursor: pointer;
  font-size: inherit;
  border: 1px solid #000000;
  padding-top: 25.8px;
  padding-bottom: 25.8px;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.title {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

.buttons-container{
  display: flex;
}

.inputs{
  flex-basis: 75%;
}

.numbers {
  display: flex;
  flex-wrap: wrap;
}

.numbers li {
  flex-basis: 33.33%;
}
.numbers li:last-child {
  flex-basis: 100%;
}

.operations {
  flex-basis: 25%;
  display: flex;
  flex-direction: column;
}

.clear-buttons {
  display: flex;
  flex-wrap: wrap;
}

.cancel-button {
  flex-basis: 66.66%;
}

.back-button {
  flex-basis: 33.33%;
}

.numbers button, .operations button {
  width: 100%;
}

.inputs button {
  background-color: #808080;
}

.operations button{
  background-color: #ffa500;
}

.inputs button:hover {
  background-color: #9b9b9b;
}

.operations button:hover{
  background-color: #ffb62d;
}


.inputs button:active {
  background-color: #575757;
}

.operations button:active {
  background-color: #ca8300;
}

.calculator {
  width: 40440044px;
  height: 600px;
  background-color: #000000;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 40px;
}

.calc-row {
  display: flex;
  justify-content: space-around;
  height: 100px;
}

.answer-number {
  margin: 0px;
  display: flex;
  align-items: center;
  font-family: "Courier New", Courier, monospace;
  color: #ffefd5;
  width: 90%;
  height: 99%;
  justify-content: flex-end;
}

